# reserve-meet

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
booking/: admin.py  choices.py  filters.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
booking/migrations/: 0001_add_btree_gist_extension.py  0001_create_models.py  0002_create_models.py  0003_seed_data.py
core/: admin.py  choices.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
core/management/commands/: clean_expired_tokens.py
core/migrations/: 0001_create_models.py  0002_seed_user_data.py
settings/: settings.py  urls.py
tests/: README.md  __init__.py  conftest.py  factories.py  test_api.py  test_models.py  test_serializers.py  test_sessions_api.py  test_user_api.py  test_validators.py
